src/include/duckdb.h


typedef enum DUCKDB_TYPE {
	DUCKDB_TYPE_INVALID = 0,
	DUCKDB_TYPE_BOOLEAN = 1,
	DUCKDB_TYPE_TINYINT = 2,
	DUCKDB_TYPE_SMALLINT = 3,
	DUCKDB_TYPE_INTEGER = 4,
	DUCKDB_TYPE_BIGINT = 5,
	DUCKDB_TYPE_UTINYINT = 6,
	DUCKDB_TYPE_USMALLINT = 7,
	DUCKDB_TYPE_UINTEGER = 8,
	DUCKDB_TYPE_UBIGINT = 9,
	DUCKDB_TYPE_FLOAT = 10,
	DUCKDB_TYPE_DOUBLE = 11,
	DUCKDB_TYPE_TIMESTAMP = 12,
	DUCKDB_TYPE_DATE = 13,
	DUCKDB_TYPE_TIME = 14,
	DUCKDB_TYPE_INTERVAL = 15,
	DUCKDB_TYPE_HUGEINT = 16,
	DUCKDB_TYPE_UHUGEINT = 32,
	DUCKDB_TYPE_VARCHAR = 17,
	DUCKDB_TYPE_BLOB = 18,
	DUCKDB_TYPE_DECIMAL = 19,
	DUCKDB_TYPE_TIMESTAMP_S = 20,
	DUCKDB_TYPE_TIMESTAMP_MS = 21,
	DUCKDB_TYPE_TIMESTAMP_NS = 22,
	DUCKDB_TYPE_ENUM = 23,
	DUCKDB_TYPE_LIST = 24,
	DUCKDB_TYPE_STRUCT = 25,
	DUCKDB_TYPE_MAP = 26,
	DUCKDB_TYPE_ARRAY = 33,
	DUCKDB_TYPE_UUID = 27,
	DUCKDB_TYPE_UNION = 28,
	DUCKDB_TYPE_BIT = 29,
	DUCKDB_TYPE_TIME_TZ = 30,
	DUCKDB_TYPE_TIMESTAMP_TZ = 31,
	DUCKDB_TYPE_TIMESTAMP_TZ_NS = 42,
	DUCKDB_TYPE_ANY = 34,
	DUCKDB_TYPE_BIGNUM = 35,
	DUCKDB_TYPE_SQLNULL = 36,
	DUCKDB_TYPE_STRING_LITERAL = 37,
	DUCKDB_TYPE_INTEGER_LITERAL = 38,
	DUCKDB_TYPE_TIME_NS = 39,
	DUCKDB_TYPE_GEOMETRY = 40,
	DUCKDB_TYPE_VARIANT = 41,
} duckdb_type;
typedef enum duckdb_state { DuckDBSuccess = 0, DuckDBError = 1 } duckdb_state;
typedef uint64_t idx_t;
typedef struct {
	idx_t deprecated_column_count;
	idx_t deprecated_row_count;
	idx_t deprecated_rows_changed;
	duckdb_column *deprecated_columns;
	char *deprecated_error_message;
	void *internal_data;
} duckdb_result;
typedef struct _duckdb_database {
	void *internal_ptr;
} * duckdb_database;
typedef struct _duckdb_connection {
	void *internal_ptr;
} * duckdb_connection;
typedef struct _duckdb_config {
	void *internal_ptr;
} * duckdb_config;
typedef struct _duckdb_value {
	void *internal_ptr;
} * duckdb_value;
DUCKDB_C_API duckdb_state duckdb_open(const char *path, duckdb_database *out_database);
DUCKDB_C_API duckdb_state duckdb_open_ext(const char *path, duckdb_database *out_database, duckdb_config config,
                                          char **out_error);
DUCKDB_C_API void duckdb_close(duckdb_database *database);
DUCKDB_C_API duckdb_state duckdb_connect(duckdb_database database, duckdb_connection *out_connection);
DUCKDB_C_API void duckdb_disconnect(duckdb_connection *connection);
DUCKDB_C_API duckdb_state duckdb_create_config(duckdb_config *out_config);
DUCKDB_C_API size_t duckdb_config_count(void);
DUCKDB_C_API duckdb_state duckdb_get_config_flag(size_t index, const char **out_name, const char **out_description);
DUCKDB_C_API duckdb_state duckdb_set_config(duckdb_config config, const char *name, const char *option);
DUCKDB_C_API void duckdb_destroy_config(duckdb_config *config);
DUCKDB_C_API duckdb_state duckdb_query(duckdb_connection connection, const char *query, duckdb_result *out_result);
DUCKDB_C_API void duckdb_destroy_result(duckdb_result *result);
DUCKDB_C_API const char *duckdb_column_name(duckdb_result *result, idx_t col);
DUCKDB_C_API duckdb_type duckdb_column_type(duckdb_result *result, idx_t col);
DUCKDB_C_API idx_t duckdb_column_count(duckdb_result *result);
DUCKDB_C_API idx_t duckdb_row_count(duckdb_result *result);
DUCKDB_C_API idx_t duckdb_rows_changed(duckdb_result *result);
DUCKDB_C_API void *duckdb_column_data(duckdb_result *result, idx_t col);
DUCKDB_C_API bool *duckdb_nullmask_data(duckdb_result *result, idx_t col);
DUCKDB_C_API const char *duckdb_result_error(duckdb_result *result);