tools/juliapkg/src/api.jl

# Let's keep C function calls until Julia function has been tested functional.
#=//===--------------------------------------------------------------------===//
// Open/Connect
//===--------------------------------------------------------------------===//
=#
"""
	duckdb_open(path, out_database)

Creates a new database or opens an existing database file stored at the the given path.
If no path is given a new in-memory database is created instead.

* `path`: Path to the database file on disk, or `nullptr` or `:memory:` to open an in-memory database.
* `out_database`: The result database object.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_open(path, out_database)
    return ccall(
        (:duckdb_open, libduckdb),
        Int32,
        (Ptr{UInt8}, Ptr{Cvoid}),
        path,
        out_database,
    )
end
"""
	duckdb_close(database)

Closes the specified database and de-allocates all memory allocated for that database.
This should be called after you are done with any database allocated through `duckdb_open`.
Note that failing to call `duckdb_close` (in case of e.g. a program crash) will not cause data corruption.
Still it is recommended to always correctly close a database object after you are done with it.

* `database`: The database object to shut down.

"""
function duckdb_close(database)
    return ccall((:duckdb_close, libduckdb), Cvoid, (Ptr{Cvoid},), database)
end
"""
	duckdb_connect(database, out_connection)

Opens a connection to a database. Connections are required to query the database, and store transactional state
associated with the connection.

* `database`: The database file to connect to.
* `out_connection`: The result connection object.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_connect(database, out_connection)
    return ccall(
        (:duckdb_connect, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{Cvoid}),
        database[],
        out_connection,
    )
end

"""
	duckdb_disconnect(connection)

Closes the specified connection and de-allocates all memory allocated for that connection.
* `connection`: The connection to close.

"""
function duckdb_disconnect(connection)
    return ccall((:duckdb_disconnect, libduckdb), Cvoid, (Ptr{Cvoid},), connection)
end

#=
//===--------------------------------------------------------------------===//
// Configuration
//===--------------------------------------------------------------------===//
=#

"""
	duckdb_create_config(config)

Initializes an empty configuration object that can be used to provide start-up options for the DuckDB instance
through `duckdb_open_ext`.

This will always succeed unless there is a malloc failure.

* `out_config`: The result configuration object.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_create_config(config)
    return ccall((:duckdb_create_config, libduckdb), Int32, (Ptr{Cvoid},), config)
end

"""
	duckdb_config_count()

This returns the total amount of configuration options available for usage with `duckdb_get_config_flag`.

This should not be called in a loop as it internally loops over all the options.

* returns: The amount of config options available.

"""
function duckdb_config_count()
    return ccall((:duckdb_config_count, libduckdb), Int32, ())
end

"""
	duckdb_get_config_flag(index,out_name,out_description)

Obtains a human-readable name and description of a specific configuration option. This can be used to e.g.
display configuration options. This will succeed unless `index` is out of range (i.e. `>= duckdb_config_count`).

The result name or description MUST NOT be freed.

* `index`: The index of the configuration option (between 0 and `duckdb_config_count`)
* `out_name`: A name of the configuration flag.
* `out_description`: A description of the configuration flag.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_get_config_flag(index, out_name, out_description)
    return ccall(
        (:duckdb_get_config_flag, libduckdb),
        Int32,
        (Int32, Ptr{Ptr{UInt8}}, Ptr{Ptr{UInt8}}),
        index,
        out_name,
        out_description,
    )
end

"""
	duckdb_set_config(config,name,option)

Sets the specified option for the specified configuration. The configuration option is indicated by name.
To obtain a list of config options, see `duckdb_get_config_flag`.

In the source code, configuration options are defined in `config.cpp`.

This can fail if either the name is invalid, or if the value provided for the option is invalid.

* `duckdb_config`: The configuration object to set the option on.
* `name`: The name of the configuration flag to set.
* `option`: The value to set the configuration flag to.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_set_config(duckdb_config, name, option)
    return ccall(
        (:duckdb_set_config, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Ptr{UInt8}),
        duckdb_config,
        name,
        option,
    )
end

"""
	duckdb_destroy_config(config)

Destroys the specified configuration option and de-allocates all memory allocated for the object.

* `config`: The configuration object to destroy.

"""
function duckdb_destroy_config(config)
    return ccall((:duckdb_destroy_config, libduckdb), Cvoid, (Ptr{Cvoid},), config)
end

#=
//===--------------------------------------------------------------------===//
// Query Execution
//===--------------------------------------------------------------------===//
=#

"""
	duckdb_query(connection,query,out_result)

Executes a SQL query within a connection and stores the full (materialized) result in the out_result pointer.
If the query fails to execute, DuckDBError is returned and the error message can be retrieved by calling
`duckdb_result_error`.

Note that after running `duckdb_query`, `duckdb_destroy_result` must be called on the result object even if the
query fails, otherwise the error stored within the result will not be freed correctly.

* `connection`: The connection to perform the query in.
* `query`: The SQL query to run.
* `out_result`: The query result.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

"""
function duckdb_query(connection, query, out_result)
    return ccall(
        (:duckdb_query, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Ptr{Cvoid}),
        connection[],
        query,
        out_result,
    )
end

"""
	duckdb_destroy_result(result)
Closes the result and de-allocates all memory allocated for that connection.

* `result`: The result to destroy.

"""
function duckdb_destroy_result(result)
    return ccall((:duckdb_destroy_result, libduckdb), Cvoid, (Ptr{Cvoid},), result)
end

"""
	duckdb_column_name(result,col)

Returns the column name of the specified column. The result should not need be freed; the column names will
automatically be destroyed when the result is destroyed.

Returns `NULL` if the column is out of range.

* `result`: The result object to fetch the column name from.
* `col`: The column index.
* returns: The column name of the specified column.

"""
function duckdb_column_name(result, col)
    return ccall(
        (:duckdb_column_name, libduckdb),
        Ptr{UInt8},
        (Ptr{Cvoid}, Int32),
        result,
        col - 1,
    )
end

"""
	duckdb_column_type(result,col)

Returns the column type of the specified column.

Returns `DUCKDB_TYPE_INVALID` if the column is out of range.

* `result`: The result object to fetch the column type from.
* `col`: The column index.
* returns: The column type of the specified column.

"""
function duckdb_column_type(result, col)
    return ccall(
        (:duckdb_column_type, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        result,
        col - 1,
    )
end

"""
	duckdb_column_count(result)

Returns the number of columns present in a the result object.

* `result`: The result object.
* returns: The number of columns present in the result object.

"""
function duckdb_column_count(result)
    return ccall((:duckdb_column_count, libduckdb), Int32, (Ptr{Cvoid},), result)
end

"""
	duckdb_row_count(result)

Returns the number of rows present in a the result object.

* `result`: The result object.
* returns: The number of rows present in the result object.

"""
function duckdb_row_count(result)
    return ccall((:duckdb_row_count, libduckdb), Int64, (Ptr{Cvoid},), result)
end

"""
	duckdb_rows_changed(result)

Returns the number of rows changed by the query stored in the result. This is relevant only for INSERT/UPDATE/DELETE
queries. For other queries the rows_changed will be 0.

* `result`: The result object.
* returns: The number of rows changed.

"""
function duckdb_rows_changed(result)
    return ccall((:duckdb_rows_changed, libduckdb), Int64, (Ptr{Cvoid},), result)
end

"""
	duckdb_column_data(result,col)

Returns the data of a specific column of a result in columnar format. This is the fastest way of accessing data in a
query result, as no conversion or type checking must be performed (outside of the original switch). If performance
is a concern, it is recommended to use this API over the `duckdb_value` functions.

The function returns a dense array which contains the result data. The exact type stored in the array depends on the
corresponding duckdb_type (as provided by `duckdb_column_type`). For the exact type by which the data should be
accessed, see the comments in [the types section](types) or the `DUCKDB_TYPE` enum.

For example, for a column of type `DUCKDB_TYPE_INTEGER`, rows can be accessed in the following manner:
```c
int32_t *data = (int32_t *) duckdb_column_data(&result, 0);
printf("Data for row %d: %d\\n", row, data[row]);
```

* `result`: The result object to fetch the column data from.
* `col`: The column index.
* returns: The column data of the specified column.

"""
function duckdb_column_data(result, col)
    return ccall(
        (:duckdb_column_data, libduckdb),
        Ptr{Cvoid},
        (Ptr{Cvoid}, Int32),
        result,
        col - 1,
    )
end

"""
	duckdb_nullmask_data(result,col)

Returns the nullmask of a specific column of a result in columnar format. The nullmask indicates for every row
whether or not the corresponding row is `NULL`. If a row is `NULL`, the values present in the array provided
by `duckdb_column_data` are undefined.

```c
int32_t *data = (int32_t *) duckdb_column_data(&result, 0);
bool *nullmask = duckdb_nullmask_data(&result, 0);
if (nullmask[row]) {
    printf("Data for row %d: NULL\n", row);
} else {
    printf("Data for row %d: %d\n", row, data[row]);
}
```

* `result`: The result object to fetch the nullmask from.
* `col`: The column index.
* returns: The nullmask of the specified column.

"""
function duckdb_nullmask_data(result, col)
    return ccall(
        (:duckdb_nullmask_data, libduckdb),
        Ptr{Int32},
        (Ptr{Cvoid}, Int32),
        result,
        col - 1,
    )
end

"""
	duckdb_result_error(result)

Returns the error message contained within the result. The error is only set if `duckdb_query` returns `DuckDBError`.

The result of this function must not be freed. It will be cleaned up when `duckdb_destroy_result` is called.

* `result`: The result object to fetch the nullmask from.
* returns: The error of the result.

"""
function duckdb_result_error(result)
    return ccall((:duckdb_result_error, libduckdb), Ptr{UInt8}, (Ptr{Cvoid},), result)
end

#=
//===--------------------------------------------------------------------===//
// Result Functions
//===--------------------------------------------------------------------===//
